# buildroot

board/orangepi/orangepi-zero/patches/linux/: 0003-ARM-dts-orange-pi-zero-enable-spidev.patch
board/raspberrypi/: boot.cmd  genimage-raspberrypi0w.cfg
package/: Config.in  Makefile.in  pkg-conan.mk
package/blink-led/: CMakeLists.txt  Config.in  blink-led.mk  conanfile.py  main.cpp
package/conan/: Config.in
package/conan-gtest/: conan-gtest.mk
package/conan-zlib/: conan-zlib.mk
package/oled96/: Config.in  oled96.mk
package/rpi-firmware/: config.txt  rpi-firmware.hash
package/rpi-oled-example/: CMakeLists.txt  Config.in  conanfile.py  main.c  main.cpp  rpi-oled-example.mk  toolchain.cmake
package/rpi-wifi-firmware/: S45wifi  rpi-wifi-firmware.mk
package/rpi-wifi-startup/: Config.in  S30wifi  rpi-wifi-startup.mk
system/: device_table_dev.txt
